<resources>
    <string name="app_name">GithubApp</string>
    <string name="user_follow">Follow</string>
    <string name="user_sponsor">Sponsor</string>
    <string name="login_in">Login</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>
    <string name="login_require_username">Require username！</string>
    <string name="login_require_password">Require password！</string>

    <string name="splash_version">© 2019 daidong</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_user">User</string>
    <string name="menu_home">Repos</string>
    <string name="menu_star">Stars</string>
    <string name="menu_trending">Trending</string>
    <string name="menu_tools">Setting</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_about">About</string>

    <!-- About -->
    <string name="about_author">Author</string>
    <string name="about_author_link">dddddd1102</string>
    <string name="about_open_source">Open Source</string>
    <string name="about_version_code">Version Code</string>
    <string name="about_share">Share</string>
    <string name="about_share_wechat">share to Wechat</string>
    <string name="about_share_friend_circle">share to friend circle</string>
    <string name="about_share_weibo">share to Weibo</string>
    <string name="about_share_copy">copy</string>

    <!-- Tools -->
    <string name="tools_theme">Theme</string>
    <string name="tools_language">Language</string>
    <string name="tools_language_zh">中文</string>
    <string name="tools_language_en">English</string>
    <string name="tools_language_title">Please check language</string>
    <string name="tools_theme_title">Please check theme</string>
    <string name="tools_sure">Sure</string>

</resources>
