<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.dd.githubapp.ui.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/nav_star"
            android:name="com.dd.githubapp.ui.ui.star.StarFragment"
            android:label="@string/menu_star"
            tools:layout="@layout/fragment_star" />

    <fragment
            android:id="@+id/nav_trending"
            android:name="com.dd.githubapp.ui.ui.trending.TrendingFragment"
            android:label="@string/menu_trending"
            tools:layout="@layout/fragment_trending" />

    <fragment
            android:id="@+id/nav_tools"
            android:name="com.dd.githubapp.ui.ui.tools.ToolsFragment"
            android:label="@string/menu_tools"
            tools:layout="@layout/fragment_tools" />

    <fragment
            android:id="@+id/nav_share"
            android:name="com.dd.githubapp.ui.ui.share.ShareFragment"
            android:label="@string/menu_share"
            tools:layout="@layout/fragment_share" />

    <fragment
            android:id="@+id/nav_send"
            android:name="com.dd.githubapp.ui.ui.send.SendFragment"
            android:label="@string/menu_send"
            tools:layout="@layout/fragment_send" />
    <fragment
            android:id="@+id/nav_user"
            android:name="com.dd.githubapp.ui.ui.user.UserFragment"
            android:label="@string/menu_user"
            tools:layout="@layout/fragment_user" />

    <fragment
            android:id="@+id/nav_about"
            android:name="com.dd.githubapp.ui.ui.about.AboutFragment"
            android:label="@string/menu_about"
            tools:layout="@layout/fragment_about" />
</navigation>