<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <include layout="@layout/layout_top"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.06"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintBottom_toBottomOf="parent"/>


    <com.qmuiteam.qmui.widget.QMUIRadiusImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:src="@mipmap/test"
            app:qmui_corner_radius="16dp"/>

    <com.dd.githubapp.widget.EditLayout
            android:id="@+id/el_username"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            app:editIcon="@drawable/ic_user"
            app:editHint="@string/login_username"
            android:layout_marginTop="@dimen/content_space_2x"
    />

    <com.dd.githubapp.widget.EditLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:id="@+id/el_password"
            app:layout_constraintTop_toBottomOf="@+id/el_username"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            app:editHint="@string/login_password"
            app:editIcon="@drawable/ic_password"
            android:layout_marginTop="@dimen/content_space_2x"
    />


    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.7"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            app:qmui_borderColor="@color/color_light_green"
            android:text="@string/login_in"
            android:textColor="@color/color_white"
            app:qmui_backgroundColor="@color/color_light_green"
            android:paddingTop="@dimen/content_space_2x"
            android:paddingBottom="@dimen/content_space_2x"
    />

</androidx.constraintlayout.widget.ConstraintLayout>