<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserActivity">

    <include layout="@layout/layout_top"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.06"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintBottom_toBottomOf="parent"/>

    <com.qmuiteam.qmui.widget.QMUIRadiusImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.25"
            app:qmui_is_circle="true"
            app:layout_constraintDimensionRatio="1:1"
            android:contentDescription="@string/app_name"
            android:id="@+id/iv_avatar"
            app:layout_constraintVertical_bias="0.18"
            android:src="@mipmap/test"/>

    <TextView
            android:id="@+id/tv_user"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/qmui_content_spacing_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
            android:layout_width="wrap_content"
            tools:text="DAI DONG"
            android:layout_height="wrap_content"/>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
            app:layout_constraintEnd_toStartOf="@+id/iv_avatar"
            android:text="@string/user_follow"
            android:textColor="@color/color_white"
            android:paddingStart="@dimen/qmui_content_padding_horizontal"
            android:paddingEnd="@dimen/qmui_content_padding_horizontal"
            android:paddingTop="4dp"
            app:qmui_borderColor="@color/color_dark_green"
            app:qmui_backgroundColor="@color/color_dark_green"
            android:paddingBottom="4dp"/>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
            android:text="@string/user_sponsor"
            android:textColor="@color/color_white"
            android:paddingStart="@dimen/qmui_content_padding_horizontal"
            android:paddingEnd="@dimen/qmui_content_padding_horizontal"
            android:paddingTop="4dp"
            app:qmui_borderColor="@color/colorAccent"
            app:qmui_backgroundColor="@color/colorAccent"
            android:paddingBottom="4dp"/>

    <TextView
            android:id="@+id/tv_nickname"
            app:layout_constraintTop_toBottomOf="@+id/tv_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            tools:text="daidong"
            android:layout_marginTop="@dimen/content_space"
            android:textColor="@color/qmui_config_color_50_white"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>