<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.UserActivity">


    <com.qmuiteam.qmui.widget.QMUIRadiusImageView
            android:id="@+id/iv_avatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/test"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18"
            app:qmui_is_circle="true" />

    <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qmui_content_spacing_horizontal"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
            tools:text="DAI DONG" />

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/qmui_content_padding_horizontal"
            android:paddingTop="4dp"
            android:paddingEnd="@dimen/qmui_content_padding_horizontal"
            android:paddingBottom="4dp"
            android:text="@string/user_follow"
            android:textColor="@color/color_white"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
            app:layout_constraintEnd_toStartOf="@+id/iv_avatar"
            app:qmui_backgroundColor="@color/color_dark_green"
            app:qmui_borderColor="@color/color_dark_green" />

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/qmui_content_padding_horizontal"
            android:paddingTop="4dp"
            android:paddingEnd="@dimen/qmui_content_padding_horizontal"
            android:paddingBottom="4dp"
            android:text="@string/user_sponsor"
            android:textColor="@color/color_white"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
            app:qmui_backgroundColor="@color/colorAccent"
            app:qmui_borderColor="@color/colorAccent" />

    <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_space"
            android:textColor="@color/qmui_config_color_50_pure_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user"
            tools:text="daidong" />

    <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_location"
            android:gravity="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_email"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nickname"
            tools:text="chongqing" />

    <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_email"
            android:gravity="center"
            android:layout_marginStart="4dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/tv_location"
            app:layout_constraintTop_toBottomOf="@+id/tv_nickname"
            tools:text="ddongisme@gmail.com" />


</androidx.constraintlayout.widget.ConstraintLayout>